[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/custom_game_menu.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 489.0
margin_top = 224.0
margin_right = -432.0
margin_bottom = -185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuContainer"]
margin_right = 103.0
margin_bottom = 191.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer/HBoxContainer"]
margin_right = 103.0
margin_bottom = 191.0

[node name="Button" type="Button" parent="MainMenuContainer/HBoxContainer/VBoxContainer"]
margin_right = 103.0
margin_bottom = 20.0
text = "Quick Game"

[node name="CustomGameBtn" type="Button" parent="MainMenuContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 103.0
margin_bottom = 44.0
text = "Custom Game"

[node name="Button3" type="Button" parent="MainMenuContainer/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 103.0
margin_bottom = 68.0
text = "Multiplayer"

[node name="Button6" type="Button" parent="MainMenuContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 103.0
margin_bottom = 92.0
text = "Options"

[node name="Button4" type="Button" parent="MainMenuContainer/HBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 103.0
margin_bottom = 116.0
text = "Extra"

[node name="QuitBtn" type="Button" parent="MainMenuContainer/HBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 103.0
margin_bottom = 140.0
text = "Quit"

[node name="CustomGameMenu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="MainMenuContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MainMenuContainer/HBoxContainer/VBoxContainer/CustomGameBtn" to="." method="_on_CustomGameBtn_pressed"]
[connection signal="pressed" from="MainMenuContainer/HBoxContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
